--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gatsby-starter-tyra",
+  "postinstall": "electron-builder install-app-deps",
   "description": "Gatsby Tyra Starter",
   "license": "MIT",
   "scripts": {
@@ -9,23 +10,23 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "gatsby": "^2.0.90",
-    "gatsby-image": "^2.0.25",
-    "gatsby-plugin-feed": "^2.0.11",
-    "gatsby-plugin-google-analytics": "^2.0.9",
-    "gatsby-plugin-react-helmet": "^3.0.5",
-    "gatsby-plugin-sharp": "^2.0.17",
-    "gatsby-plugin-sitemap": "^2.0.4",
+    "gatsby": "^2.16.5",
+    "gatsby-image": "^2.2.29",
+    "gatsby-plugin-feed": "^2.3.19",
+    "gatsby-plugin-google-analytics": "^2.1.23",
+    "gatsby-plugin-react-helmet": "^3.1.13",
+    "gatsby-plugin-sharp": "^2.2.32",
+    "gatsby-plugin-sitemap": "^2.2.19",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-copy-linked-files": "^2.0.8",
-    "gatsby-remark-images": "^3.0.1",
-    "gatsby-source-filesystem": "^2.0.13",
-    "gatsby-transformer-remark": "^2.2.0",
-    "gatsby-transformer-sharp": "^2.1.10",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.3.0",
+    "gatsby-remark-copy-linked-files": "^2.1.28",
+    "gatsby-remark-images": "^3.1.28",
+    "gatsby-source-filesystem": "^2.1.33",
+    "gatsby-transformer-remark": "^2.6.30",
+    "gatsby-transformer-sharp": "^2.2.23",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
     "tachyons": "^4.11.1"
   }
 }
