--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Smakosh <ismai23l@hotmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
-    "dotenv": "^6.2.0",
+    "dotenv": "^8.2.0",
     "formik": "^1.4.1",
     "gatsby": "^2.17.1",
     "gatsby-image": "^2.0.20",
@@ -16,22 +16,25 @@
     "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-nprogress": "^2.0.7",
-    "gatsby-plugin-offline": "^2.0.20",
+    "gatsby-plugin-offline": "^3.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sharp": "2.2.12",
+    "gatsby-plugin-sharp": "2.2.32",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-source-graphql": "^2.1.20",
     "gatsby-transformer-sharp": "^2.1.8",
+    "graphql": "^14.4.1",
+    "graphql-tools": "^4.0.5",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
     "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-dom": "^16.8.6",
-    "react-google-recaptcha": "^1.0.5",
+    "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.0",
     "styled-components": "^4.1.3",
-    "yup": "^0.26.6"
+    "typescript": "^3.6.4",
+    "yup": "^0.27.0"
   },
   "keywords": [
     "gatsby",
@@ -48,13 +51,13 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.10.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-react-hooks": "^1.3.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^1.15.3"
   },
   "repository": {
