--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "gatsby-plugin-nprogress": "^2.0.7",
     "gatsby-plugin-offline": "^3.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sharp": "2.2.32",
+    "gatsby-plugin-sharp": "2.2.14",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-source-graphql": "^2.1.20",
     "gatsby-transformer-sharp": "^2.1.8",
-    "graphql": "^14.5.8",
     "graphql-tools": "^4.0.5",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
@@ -66,5 +65,8 @@
   },
   "bugs": {
     "url": "https://github.com/smakosh/gatsby-portfolio-dev/issues"
+  },
+  "resolutions": {
+    "graphql": "^0.13.2"
   }
 }
