--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Smakosh <ismai23l@hotmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
+    "core-js": "^3.3.3",
     "dotenv": "^8.2.0",
     "formik": "^1.4.1",
     "gatsby": "^2.17.1",
