--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-source-graphql": "^2.1.11",
     "gatsby-transformer-sharp": "^2.1.8",
+    "graphql": "^0.13.2",
     "graphql-tools": "^4.0.5",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
@@ -34,6 +35,7 @@
     "react-helmet": "^5.2.0",
     "styled-components": "^4.1.3",
     "typescript": "^3.6.4",
+    "webpack": "^4.0.0",
     "yup": "^0.27.0"
   },
   "keywords": [
@@ -67,7 +69,5 @@
   "bugs": {
     "url": "https://github.com/smakosh/gatsby-portfolio-dev/issues"
   },
-  "resolutions": {
-    "graphql": "^0.13.2"
-  }
+  "resolutions": {}
 }
