--- a/.gitignore
+++ b/.gitignore
@@ -125,7 +125,7 @@ node_modules/
 
 # lock files
 yarn.lock
-package-lock.json
+# package-lock.json
 
 # starters are special; we want to persist the lock files
 !starters/*/package-lock.json
