--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "Smakosh <ismai23l@hotmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
-    "dotenv": "^6.2.0",
+    "dotenv": "^8.2.0",
     "formik": "^1.4.1",
-    "gatsby": "^2.8.6",
+    "gatsby": "^2.17.1",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-canonical-urls": "^2.0.8",
@@ -30,6 +30,7 @@
     "react-dom": "^16.8.6",
     "react-google-recaptcha": "^1.0.5",
     "react-helmet": "^5.2.0",
+    "react-scripts": "^3.2.0",
     "styled-components": "^4.1.3",
     "yup": "^0.26.6"
   },
