--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "dotenv": "^6.2.0",
+    "eslint-config-react-app": "^5.0.2",
     "formik": "^1.4.1",
     "gatsby": "^2.17.2",
     "gatsby-image": "^2.0.20",
@@ -24,13 +25,18 @@
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-source-graphql": "^2.0.19",
     "gatsby-transformer-sharp": "^2.1.8",
+    "graphql": "^14.5.8",
+    "graphql-tools": "^4.0.5",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
     "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-dom": "^16.8.6",
     "react-google-recaptcha": "^1.0.5",
     "react-helmet": "^5.2.0",
+    "sharp": "^0.23.1",
     "styled-components": "^4.1.3",
+    "tsutils": "^3.17.1",
+    "typescript": "^3.6.4",
     "yup": "^0.26.6"
   },
   "keywords": [
@@ -48,8 +54,8 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.10.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^6.0.0",
+    "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
