--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-transformer-sharp": "^2.1.8",
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.5",
+    "netlify-cli": "^2.35.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
     "react-anchor-link-smooth-scroll": "^1.0.11",
